# SmartSignals

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  SmartSignals.h  test.cpp  test.h
